Fix docker